kubernetes02/k8s/service.yml
kind: Service
apiVersion: v1
metadata:
  name:  main-server-service
spec:
  selector:
    editor:  main-server
  type:  ClusterIP
  ports:
  - name:  name-of-the-port
    port:  80
    targetPort:  3000
